# torch-dmff

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
examples/pem/: pem.xml  run.py
examples/pme/: run.py
examples/qeq/: run.py
tests/: .test_pem_numerical.py.swp  deepmd-v2.2.9.slurm  test_jit.py  test_nblist.py  test_pem_numerical.py  test_pme_numerical.py  test_qeq_numerical.py
tests/data/pem/: after_pem.data  conp.lammpstrj  input_conp.lmp  system.data
tests/data/pem/conp/far/: after_pem.data  conp.lammpstrj
tests/data/pem/conp/near/: after_pem.data  conp.lammpstrj  kspace_imformation
tests/data/qeq/: J.npy  box.npy  chi.npy  eta.npy  init_charge.npy  pairs.npy  positions.npy  ref_charge.npy  ref_force.npy
torch_admp/: nblist.py  pem.py  pme.py  qeq.py  tool.py
torch_dmff/: __init__.py  base_force.py  env.py  nblist.py  pem.py  pme.py  qeq.py  utils.py
