# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_dmff"
version = "1.0"
description = "DMFF in PyTorch backend"
readme = "README.md"
license = { file = ".license-header.txt" }
dependencies = [
    "torch>=2.1.0",
    "torchopt==0.7.3",
    "numpy>=1.20.0",
    "scipy>=1.6.0",
]
[project.urls]
Homepage = "https://github.com/ChiahsinChu/torch-dmff"
